@@ -12,7 +12,7 @@ remove $s
 ../../testutils/uu_decode --decode < testfile.uue || miscarry could not uudecode testfile.uue.
 
 
-do_output d1 "${prt} $s" 0 expected/default.1 IGNORE
+do_output d1 "${vg_prt} $s" 0 expected/default.1 IGNORE
 
 remove $s
 success
